# Cight

./: .gitignore  CMakeLists.txt  README.md
include/cight/: camera_stream.hpp  difference_matcher.hpp  difference_stream.hpp  drift_estimator.hpp  feature_map.hpp  feature_point.hpp  feature_selector.hpp  interest_map.hpp  interest_region.hpp  interest_selector.hpp  interpolator.hpp  memory.hpp  mock_matcher.hpp  sensor_stream.hpp  settings.hpp  shift_estimator.hpp  similarity_map.hpp  stream_buffer.hpp  stream_matcher.hpp  stream_replay.hpp  stream_teach.hpp  video_stream.hpp  visual_matcher.hpp
src/cight/: camera_stream.cpp  difference_matcher.cpp  difference_stream.cpp  drift_estimator.cpp  feature_map.cpp  feature_point.cpp  feature_selector.cpp  interest_map.cpp  interest_region.cpp  interest_selector.cpp  interpolator.cpp  memory.cpp  mock_matcher.cpp  shift_estimator.cpp  similarity_map.cpp  stream_buffer.cpp  stream_replay.cpp  stream_teach.cpp  video_stream.cpp  visual_matcher.cpp
